added style.css in menu.html

--- a/menu.html
+++ b/menu.html
@@ -4,8 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="menu-item">
+        <h1 class="item-name">Item one: Burger</h1>
+        <p class="item-description">Description of Item one : Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam esse voluptatem deserunt vitae praesentium possimus.</p>
+        <img width="500px" src="images/Burger.jpg" alt="">
+        <h3>Price:499TK</h3>
+    </div>
+    <div class="menu-item">
+        <h1 class="item-name">Item Two: Pizza</h1>
+        <p class="item-description">Description of Item two: Lorem pizza ipsum dolor sit amet consectetur adipisicing elit. Quisquam esse voluptatem deserunt vitae praesentium possimus.</p>
+        <img width="500px" src="images/Pizza.jpg" alt="">
+        <h3>Price:799TK</h3>
+    </div>
+    <div class="menu-item">
+        <h1 class="item-name">Item Three: Sadwitch</h1>
+        <p class="item-description">Description of Item three: Lorem Sadwitch ipsum dolor sit amet consectetur adipisicing elit. Quisquam esse voluptatem deserunt vitae praesentium possimus.</p>
+        <img width="500px" src="images/Sandwitch.jpg" alt="">
+        <h3>Price:399TK</h3>
+    </div>
 </body>
 </html>
